log/manifests/ping-pong-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ping-pong-dep
  namespace: exercises
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: rdmon14/ping-pong:v31
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 20s}
      # Aquí invocamos el análisis de Prometheus
      - analysis:
          templates:
          - templateName: cpu-usage-check
      - setWeight: 50
      - pause: {duration: 20s}
