log/manifests/ping-pong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http-ingress
      port: 80         # Para el Ingress (público)
      targetPort: 3000
    - name: http-internal
      port: 2345       # Para que log-output pueda llamarlo (interno)
      targetPort: 3000
