log/manifests/postgres-stset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None # Headless Service para StatefulSets
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: exercises
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres # Crítico en GKE para evitar el error de carpeta 'lost+found'
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        # En GKE quitamos 'local-path' para que use el Provisioner automático de Google
        resources:
          requests:
            storage: 1Gi # GKE a veces tiene mínimos de 1Gi para discos persistentes
